project-info-site/public/styles.css
* {
 margin: 0;
 padding: 0;
 box-sizing: border-box;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

:root {
  /* darkmode */
  --Primary-color: #1e1e1e;
  --Secondary-color: #69d0f2;
  --Thired-color: #ffffff;
  --Fourth-color: #24262e;
  /* lightmode */

}

.navbar-container {
 display: flex;
 justify-content: space-between;
 align-items: center;
 padding: 2rem;
 background-color: #1e1e1e;
}

.title-container {
 display: flex;
}

h1 {
 margin-left: 1rem;
 font-weight: bolder;
 color: var(--Secondary-color);
}

h2 {
 color: var(--Thired-color);
}

h3 {
 font-size: 3rem;
 margin-bottom: 1rem;
}

.main-container{
 padding: 2rem;
 background-color: var(--Fourth-color);
 height: 100vh;
 width: 100%;
}

li {
 /* color: var(--Thired-color); */
 list-style-type: none;
 margin-bottom: 1rem;
 margin-left: 1rem;
}

li::before {
 content: "\2022";
  /* color: var(--Secondary-color); */
  font-weight: bold;
  display: inline-block;
  width: 1em;
  margin-left: -1em;
}

.background-logo {
width: 20rem;
right: -10rem;
-webkit-filter: grayscale(100%);
 filter: grayscale(100%);
 opacity: 10%;
}

.bgimg-container {
 overflow: hidden;
 position: absolute;
 right: 0;
 top: 10rem;
 width: 10rem;
 height: auto;
}

/* ligh and dark mode styles */

.text {
  color: rgba(236, 236, 236, 0.479);
}

.lightdark-container {
  display: flex;
  /* background-color: white; */
  padding: 10px;
  font-weight: bolder;
  font-size: 1rem;
}

.btn-container {
  display: flex;
  background-color: white;
  border-radius: 10px;
  padding: 2px;
  margin: 0 5px;
  cursor: pointer;
}

.btn-circle {
  border-radius: 10px;
  border: none;
  background-color: black;
  padding: .5rem;
  cursor: pointer;
}

.dark-button {
  background-color: white;
}

#black li {
  color: black;
}

#white li{
  color: white;
}

